vlib/v/checker/tests/generic_sumtype_invalid_variant.vv
type MultiGeneric<X, Y, Z> = X | Y | Z

fn main() {
	mut m := MultiGeneric<bool, int, string>(true)
	if m is u64 {
		println('hi')
	}
	if m is X {
		println('hi again')
	}
}
